Added pundit gem to the project, finished authorization

--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -1,6 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
 <%= link_to 'Мой профиль', profile_path %>
+<%= link_to 'Админ', :admin_page %>
 
 <h1>Все туры</h1>
 
