--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -1,4 +1,7 @@
 <div class="profile">
+
+  <%= link_to 'Главная', tours_path %>
+
   <h1>Мой профиль</h1>
 
   <p>
@@ -11,6 +14,8 @@
     <%= @current_user.email %>
   </p>
 
+  <%= button_to "Выход", destroy_user_session_path, id: current_user.id, method: :delete, class:"delete" %>
+
   <h2>Мои забронированные туры</h2>
 
   <div id="tours">
@@ -21,6 +26,4 @@
       </p>
     <% end %>
   </div>
-
-  <%= link_to "Создать новый тур", new_tour_path %>
 </div>
